@@ -26,7 +26,6 @@ import static org.apache.solr.common.params.CoreAdminParams.CORE_NODE_NAME;
 import static org.apache.solr.common.params.CoreAdminParams.NAME;
 import static org.apache.solr.common.params.CoreAdminParams.OTHER;
 import static org.apache.solr.common.params.CoreAdminParams.RANGES;
-import static org.apache.solr.common.params.CoreAdminParams.REQUESTID;
 import static org.apache.solr.common.params.CoreAdminParams.TARGET_CORE;
 
 import java.util.Arrays;
@@ -70,7 +69,6 @@ public class V2CoreAPIMappingTest extends V2ApiMappingTest<CoreAdminHandler> {
     apiBag.registerObject(new RequestApplyCoreUpdatesAPI(handler));
     apiBag.registerObject(new RequestSyncShardAPI(handler));
     apiBag.registerObject(new RequestBufferUpdatesAPI(handler));
-    apiBag.registerObject(new RequestCoreCommandStatusAPI(handler));
   }
 
   @Test
@@ -171,16 +169,5 @@ public class V2CoreAPIMappingTest extends V2ApiMappingTest<CoreAdminHandler> {
 
     assertEquals("requestbufferupdates", v1Params.get(ACTION));
     assertEquals("coreName", v1Params.get(NAME));
-  }
-
-  // Strictly speaking, this API isn't at the /cores/coreName path, but as the only API at its path
-  // (/cores/coreName/command-status/requestId) it doesn't merit its own test class.
-  @Test
-  public void testRequestCommandStatusAllParams() throws Exception {
-    final SolrParams v1Params =
-        captureConvertedV1Params("/cores/coreName/command-status/someId", "GET", NO_BODY);
-
-    assertEquals("requeststatus", v1Params.get(ACTION));
-    assertEquals("someId", v1Params.get(REQUESTID));
   }
 }
